# windowblind

./: .gitmodules  CMakeLists.txt  README.md  package.xml  rosstart  windowblind.launch
DOC/: algorithm.dia  algorithm.dia.autosave
cfg/: WindowBlind.json
launch/: autolaunch.launch  run.launch
src/: aromBrain.py  initPymlab.py
src/drivers/: controller.py  guard.py  weatherStation.py  weatherStation.py.save  windowblind.py  windowblind.py.save
srv/: DriverControl.srv  NodeInfo.srv  PymlabDrive.srv  PymlabInit.srv  PymlabServerStatus.srv
tools/: autooff.py  autorun.sh  parameters_blind.yaml  rosstart  start_windowblind.sh  start_windowblind_auto.sh
web/: windowblind_web.py
web/www/css/: dash.css
web/www/js/: Observatory_config.js  acc_loading.js
web/www/json/: horizont.json
web/www/layout/dash/: bootstrap.html  bootstrap_setting.html  mount.html  node_setting.html  node_setting_public.html  observatory.html  publicOverview.html  template.html
web/www/layout/dash/tools/: ConfigDiagram.html
